fix: styling the card so it doesn't stretch across the whole view when only 1 card is in the list

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -6,6 +6,7 @@ li {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    max-width: 38rem;
 }
 
 .content {
